Fix display on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -213,6 +213,7 @@ h4 {
 @media screen and (max-width: 630px) {
   .wrapper {
     margin: 0;
+    height: 100vh;
   }
 
   .projects {
